Replace use of IOUtils.readFull(File) by Files.readString(Path) where possible